@@ -1,4 +1,6 @@
 NEXT:
+ * a serious bug in the hashcache was fixed. The buildid calculation
+   used outdated hash of files from the project tree.
 
 e2factory-2.3.4pre3
  * the plugin interface was extended to allow plugins to change the
